Basic Google authentication

--- a/EGdfs_app/static/EGdfs_app/style.css
+++ b/EGdfs_app/static/EGdfs_app/style.css
@@ -1,13 +1,13 @@
 .site_header {
     text-align: center;
     font-family: "Lucida Console", "Courier New", monospace;
-    color: #CF1D46;
+    color: #DF6822;
     font-size: 34px;
 }
 
 body {
     text-align: center;
     font-family: "Courier New", monospace;
-    color: #CF1D46;
-    background-color: #101A2B;
+    color: #DF6822;
+    background-color: #010710;
 }
